Include the source_to_parent offset when removing offset applied by main.

BUG=663642
TEST=LayerTreeHostCommonTest.StickyPositionTopScrollParent, compositing/overflow/composited-sticky-element.html
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2486393006
Cr-Commit-Position: refs/heads/master@{#431898}

Former-commit-id: d2ae03fccb90a1de08a12be2c9d81cf4ff04f713